[tool.poetry]
name = "the-casta-way"
version = "0.1.0"
description = "Game made in four days with my brother for the 30th PyWeek !"
authors = ["ddorn <diego.dorn@free.fr>", "felix <felix@dorns.fr>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9.6"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
